--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ankihg",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.15.0",
     "express": "^4.13.3",
     "express-request-proxy": "^1.0.10"
   }
