--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.3",
-    "express-request-proxy": "^1.0.10"
+    "express-request-proxy": "^1.0.10",
+    "mysql": "^2.11.1"
   }
 }
